feat: add header markup and svg to header

--- a/Test task/2 task/index.html
+++ b/Test task/2 task/index.html
@@ -15,7 +15,50 @@
   </head>
   <body class="page">
     <header class="page__header page-header">
-
+      <nav class="page-header__nav main-navigation">
+        <a class="main-navigation__logo" href="index.html">
+          <img class="logo__img" src="./logo.svg" width="140" height="24" alt="">
+        </a>
+        <ul class="main-navigation__site-navigation site-navigation">
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Услуги</a>
+          </li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Виджеты</a>
+          </li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Интеграции</a>
+          </li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Кейсы</a>
+          </li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Сертификаты</a>
+          </li>
+        </ul>
+        <div class="main-navigation__wrapper">
+          <a class="main-navigation__phone" href="tel:+75555555555">+7 555 555-55-55
+          </a>
+          <ul class="main-navigation__socials social">
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <img src="./telegram.svg" width="20" height="20" alt="telegram">
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+               <img src="./viber.svg" width="20" height="20" alt="viber">
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <img src="./whatsapp.svg" width="20" height="20" alt="whatsapp">
+              </a>
+            </li>
+          </ul>
+          <p class="main-navigation__slogan">крупный интегратор CRM в Росcии и ещё 8 странах</p>
+        </div>
+      </nav>
     </header>
 
     <main class="page__content">
