feat: add markup to main-content

--- a/Test task/2 task/index.html
+++ b/Test task/2 task/index.html
@@ -61,8 +61,34 @@
       </nav>
     </header>
 
-    <main class="page__content">
-      <h1>My words</h1>
+    <main class="page__content main-content">
+      <div class="main-content__left">
+        <h2 class="main-content__title">Зарабатывайте больше <span>с WELBEX</span></h2>
+        <p class="main-content__text">Развиваем и контролируем продажи за вас</p>
+      </div>
+      <div class="main-content__right">
+        <p class="main-content__slogan">Вместе с <span>бесплатной консультацией</span> мы дарим:</p>
+        <ul class="main-content__list gifts">
+          <li class="gifts__item">
+            <h3 class="gifts__header">Виджеты</h3>
+            <p class="gifts__text">30 готовых решени</p>
+          </li>
+          <li class="gifts__item">
+            <h3 class="gifts__header">Dashboard</h3>
+            <p class="gifts__text">с показателями
+              вашего бизнеса</p>
+          </li>
+          <li class="gifts__item">
+            <h3 class="gifts__header">Skype Аудит</h3>
+            <p class="gifts__text">отдела продаж и CRM системы</p>
+          </li>
+          <li class="gifts__item">
+            <h3 class="gifts__header">35 дней</h3>
+            <p class="gifts__text">использования CRM</p>
+          </li>
+        </ul>
+        <a class="main-content__button">Получить консультацию</a>
+      </div>
     </main>
 
     <footer class="page__footer page-footer">
