feat: add styling for header

--- a/Test task/2 task/index.html
+++ b/Test task/2 task/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,50 +15,52 @@
   </head>
   <body class="page">
     <header class="page__header page-header">
-      <nav class="page-header__nav main-navigation">
-        <a class="main-navigation__logo" href="index.html">
-          <img class="logo__img" src="./logo.svg" width="140" height="24" alt="">
-        </a>
-        <ul class="main-navigation__site-navigation site-navigation">
-          <li class="site-navigation__item">
-            <a class="site-navigation__link" href="#">Услуги</a>
-          </li>
-          <li class="site-navigation__item">
-            <a class="site-navigation__link" href="#">Виджеты</a>
-          </li>
-          <li class="site-navigation__item">
-            <a class="site-navigation__link" href="#">Интеграции</a>
-          </li>
-          <li class="site-navigation__item">
-            <a class="site-navigation__link" href="#">Кейсы</a>
-          </li>
-          <li class="site-navigation__item">
-            <a class="site-navigation__link" href="#">Сертификаты</a>
-          </li>
-        </ul>
-        <div class="main-navigation__wrapper">
-          <a class="main-navigation__phone" href="tel:+75555555555">+7 555 555-55-55
+      <div class="container">
+        <nav class="page-header__nav main-navigation">
+          <a class="main-navigation__logo" href="index.html">
+            <img class="logo__img" src="./logo.svg" width="140" height="24" alt="">
           </a>
-          <ul class="main-navigation__socials social">
-            <li class="social__item">
-              <a class="social__link" href="#">
-                <img src="./telegram.svg" width="20" height="20" alt="telegram">
-              </a>
+          <ul class="main-navigation__site-navigation site-navigation">
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="#">Услуги</a>
             </li>
-            <li class="social__item">
-              <a class="social__link" href="#">
-               <img src="./viber.svg" width="20" height="20" alt="viber">
-              </a>
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="#">Виджеты</a>
             </li>
-            <li class="social__item">
-              <a class="social__link" href="#">
-                <img src="./whatsapp.svg" width="20" height="20" alt="whatsapp">
-              </a>
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="#">Интеграции</a>
+            </li>
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="#">Кейсы</a>
+            </li>
+            <li class="site-navigation__item">
+              <a class="site-navigation__link" href="#">Сертификаты</a>
             </li>
           </ul>
+          <div class="main-navigation__wrapper">
+            <a class="main-navigation__phone" href="tel:+75555555555">+7 555 555-55-55
+            </a>
+            <ul class="main-navigation__socials social">
+              <li class="social__item">
+                <a class="social__link" href="#">
+                  <img src="./telegram.svg" width="20" height="20" alt="telegram">
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link" href="#">
+                 <img src="./viber.svg" width="20" height="20" alt="viber">
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link" href="#">
+                  <img src="./whatsapp.svg" width="20" height="20" alt="whatsapp">
+                </a>
+              </li>
+            </ul>
+          </div>
           <p class="main-navigation__slogan">крупный интегратор CRM в Росcии и ещё 8 странах</p>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
 
     <main class="page__content main-content">
