feat: add footer styling

--- a/Test task/2 task/index.html
+++ b/Test task/2 task/index.html
@@ -63,7 +63,7 @@
       </div>
     </header>
 
-    <main class="page__content main-content">
+    <main class="page__content main-content container">
       <div class="main-content__left">
         <h2 class="main-content__title">Зарабатывайте больше <span>с WELBEX</span></h2>
         <p class="main-content__text">Развиваем и контролируем продажи за вас</p>
@@ -94,80 +94,82 @@
     </main>
 
     <footer class="page__footer page-footer">
-      <div class="page-footer__row">
-        <div class="page-footer__col">
-          <h2>О компании</h2>
-          <ul>
-            <li>
-              <a href="#">Партнёрская программа</a>
-            </li>
-            <li>
-              <a href="#">Вакансии</a>
-            </li>
-          </ul>
+      <div class="container">
+        <div class="page-footer__row-top">
+          <div class="page-footer__col-about">
+            <h2>О компании</h2>
+            <ul>
+              <li>
+                <a href="#">Партнёрская программа</a>
+              </li>
+              <li>
+                <a href="#">Вакансии</a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__col-menu">
+            <h2>Меню</h2>
+            <ul>
+              <li>
+                <a href="#">Расчёт стоимости</a>
+              </li>
+              <li>
+                <a href="#">Услуги</a>
+              </li>
+              <li>
+                <a href="#">Виджеты</a>
+              </li>
+              <li>
+                <a href="#">Интеграции</a>
+              </li>
+              <li>
+                <a href="#">Наши клиенты</a>
+              </li>
+              <li>
+                <a href="#">Кейсы</a>
+              </li>
+              <li>
+                <a href="#">Благодарственные письма</a>
+              </li>
+              <li>
+                <a href="#">Сертификаты</a>
+              </li>
+              <li>
+                <a href="#">Блог на Youtube</a>
+              </li>
+              <li>
+                <a href="#">Вопрос / Ответ</a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__col-contacts">
+            <h2>Контакты</h2>
+            <a href="tel:+75555555555">+7 555 555-55-55
+            </a>
+            <ul class="social">
+              <li class="social__item">
+                <a class="social__link" href="#">
+                  <img src="./telegram.svg" width="20" height="20" alt="telegram">
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link" href="#">
+                 <img src="./viber.svg" width="20" height="20" alt="viber">
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link" href="#">
+                  <img src="./whatsapp.svg" width="20" height="20" alt="whatsapp">
+                </a>
+              </li>
+            </ul>
+            <address>Москва, Путевой проезд 3с1, к 902</address>
+          </div>
         </div>
-        <div class="page-footer__col">
-          <h2>Меню</h2>
-          <ul>
-            <li>
-              <a href="#">Расчёт стоимости</a>
-            </li>
-            <li>
-              <a href="#">Услуги</a>
-            </li>
-            <li>
-              <a href="#">Виджеты</a>
-            </li>
-            <li>
-              <a href="#">Интеграции</a>
-            </li>
-            <li>
-              <a href="#">Наши клиенты</a>
-            </li>
-            <li>
-              <a href="#">Кейсы</a>
-            </li>
-            <li>
-              <a href="#">Благодарственные письма</a>
-            </li>
-            <li>
-              <a href="#">Сертификаты</a>
-            </li>
-            <li>
-              <a href="#">Блог на Youtube</a>
-            </li>
-            <li>
-              <a href="#">Вопрос / Ответ</a>
-            </li>
-          </ul>
+        <div class="page-footer__row-bottom">
+          <p>©WELBEX 2022. Все права защищены.</p>
+          <a href="#">Политика конфиденциальности</a>
         </div>
-        <div class="page-footer__col">
-          <h2>Контакты</h2>
-          <a href="tel:+75555555555">+7 555 555-55-55
-          </a>
-          <ul class="social">
-            <li class="social__item">
-              <a class="social__link" href="#">
-                <img src="./telegram.svg" width="20" height="20" alt="telegram">
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#">
-               <img src="./viber.svg" width="20" height="20" alt="viber">
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="#">
-                <img src="./whatsapp.svg" width="20" height="20" alt="whatsapp">
-              </a>
-            </li>
-          </ul>
-          <address>Москва, Путевой проезд 3с1, к 902</address>
-        </div>
-      </div>
-      <div class="page-footer__row">
-        <p>©WELBEX 2022. Все права защищены.</p>
-        <a href="#">Политика конфиденциальности</a>
       </div>
     </footer>
   </body>
