feat: keep on operating on mobile version

--- a/Test task/2 task/index.html
+++ b/Test task/2 task/index.html
@@ -73,7 +73,7 @@
         <ul class="main-content__list gifts">
           <li class="gifts__item">
             <h3 class="gifts__header">Виджеты</h3>
-            <p class="gifts__text">30 готовых решени</p>
+            <p class="gifts__text">30 готовых решений</p>
           </li>
           <li class="gifts__item">
             <h3 class="gifts__header">Dashboard</h3>
